tdf#154437: Check "Page" instead of "Slide" in Draw rename

Change-Id: Iec1ee88f12895007240408c8411cc1638c2f0559
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149672
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>